manifest/mics/game.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: game-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: game-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
