manifest/mics/tmp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: web-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx
