manifest/mics/ingress-game.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: web-app
  annotations:
  #  kubernetes.io/ingress.class: nginx
  #  kubernetes.io/ingress.class: "haproxy"
   cert-manager.io/cluster-issuer: letsencrypt-prod
   haproxy.org/path-rewrite: "/"
  #  haproxy.org/forwarded-for: "true"

spec:
  ingressClassName: haproxy
  rules:
  - host: game.kubesight.online
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-app
              port:
                number: 80

        - path: /game
          pathType: Prefix
          backend:
            service:
              name: nginx-app
              port:
                number: 80
        
       
      
  tls:
      - hosts:
          - game.kubesight.online
        secretName: game-tls-cert
