manifest/mics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: game.kubesight.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-app
            port:
              number: 80
